Added cli defaults and tests & gradle deps and fake integration tests